cmake_minimum_required(VERSION 3.5)
project(realityNative)
add_subdirectory(depends/cstl)
add_subdirectory(depends/libuv)
add_subdirectory(depends/mbedtls)
add_subdirectory(depends/json-c)
add_subdirectory(src)
if((NOT APPLE) AND (NOT ANDROID))
	add_subdirectory(src/server)
endif()
include_directories(${CMAKE_CURRENT_BINARY_DIR})